Updated to MelonLoader 5.4

--- a/PootModHelper/poot.targets
+++ b/PootModHelper/poot.targets
@@ -8,6 +8,7 @@
     </PropertyGroup>
     <ItemGroup>
         <Reference Include="Microsoft.CSharp"/>
+		<Reference Include="$(PootDirectory)\MelonLoader\0Harmony.dll"/>
         <Reference Include="$(PootDirectory)\MelonLoader\MelonLoader.dll"/>
         <Reference Include="$(ManagedFolder)\Assembly-CSharp.dll" />
         <Reference Include="$(ManagedFolder)\Il2Cppmscorlib.dll" />
